# warp-pastebin

./: Cargo.toml  Procfile  README.md
scripts/: run_dev.sh
src/: main.rs  routes.rs  server.rs
static/: index.html
static/js/: main.js
