[package]
name = "warp-pastebin"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13.7"
listenfd = "0.3.3"
maplit = "1.0"
nanoid = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
